project-app/backend/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project
  labels:
    name: project
  annotations:
    linkerd.io/inject: enabled
