project-app/backend/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project
  name: backend-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-usage
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: BACKEND_IMAGE
          ports:
            - containerPort: 8070
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            httpGet:
              path: /healthz
              port: 8070
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /healthz
              port: 8070
          resources:
            requests:
              cpu: "75m"
              memory: "60Mi"
            limits:
              cpu: "250m"
              memory: "100Mi"
